benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExpPow2_DivMod_Mul_iter3_error.log
=== Verification Error - Iteration 3 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExpPow2_DivMod_Mul.rs
Time: 2025-09-15 19:26:20

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0605]: non-primitive cast: `verus_builtin::int` as `usize`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_DivMod_Mul_impl.rs:213:21
    |
213 |         for i in 0..n as usize {
    |                     ^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0605`.

--------------------------------------------------------------------------------

Additional Output:
error[E0605]: non-primitive cast: `verus_builtin::int` as `usize`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_DivMod_Mul_impl.rs:213:21
    |
213 |         for i in 0..n as usize {
    |                     ^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0605`.
